--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://juliistudy.github.io/JULIISSTUDY.GITHUB.IO",
+  "homepage":"http://juliistudy.github.io/juliistudy.github.io",
   "name": "julipage",
   "version": "0.1.0",
   "private": true,
